# svg-cleaner-webui

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json
public/wasm/: svg_cleaner_wasm_wrapper.d.ts  svg_cleaner_wasm_wrapper.js  svg_cleaner_wasm_wrapper_bg.wasm  svg_cleaner_wasm_wrapper_bg.wasm.d.ts
src/: App.css  App.scss  App.tsx  cleaning-options-type.tsx  lib.rs  main.tsx  temp-svg.ts  theme.ts  util.ts
src/components/cleaning-options-sidebar/: cleaning-options-sidebar.scss  cleaning-options-sidebar.tsx
src/components/fancy-button/: fancy-button.scss  fancy-button.tsx
src/components/fancy-inputs/: fancy-button.tsx  fancy.scss
src/components/paste-svg-modal/: paste-svg-modal.scss  paste-svg-modal.tsx
src/components/results/: results.scss  results.tsx
src/components/svg-preview/: svg-preview.scss  svg-preview.tsx
wasm/: Cargo.toml
wasm/src/: lib.rs
