[package]
name = "svg-cleaner-wasm-wrapper"
version = "0.1.0"
authors = ["Shane Cranor"]
description = "A rust wasm wrapper for svgcleaner"
license = "MIT/Apache-2.0"
repository = "https://github.com/shanecranor/svg-cleaner-webui"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
svgcleaner = { version = "0.9.6", git = "https://github.com/RazrFalcon/svgcleaner.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"